src/test/rustdoc-ui/intra-link-errors.stderr
error: unresolved link to `path::to::nonexistent::module`
  --> $DIR/intra-link-errors.rs:8:6
   |
LL | /// [path::to::nonexistent::module]
   |      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: the lint level is defined here
  --> $DIR/intra-link-errors.rs:1:9
   |
LL | #![deny(broken_intra_doc_links)]
   |         ^^^^^^^^^^^^^^^^^^^^^^
   = note: no item named `path` is in scope
   = help: to escape `[` and `]` characters, add '\' before them like `\[` or `\]`

error: unresolved link to `std::io::not::here`
  --> $DIR/intra-link-errors.rs:13:6
   |
LL | /// [std::io::not::here]
   |      ^^^^^^^^^^^^^^^^^^
   |
   = note: the module `io` has no inner item named `not`

error: unresolved link to `std::io::Error::x`
  --> $DIR/intra-link-errors.rs:17:6
   |
LL | /// [std::io::Error::x]
   |      ^^^^^^^^^^^^^^^^^
   |
   = note: the struct `Error` has no field or associated item named `x`

error: unresolved link to `std::io::ErrorKind::x`
  --> $DIR/intra-link-errors.rs:21:6
   |
LL | /// [std::io::ErrorKind::x]
   |      ^^^^^^^^^^^^^^^^^^^^^
   |
   = note: the enum `ErrorKind` has no variant or associated item named `x`

error: unresolved link to `f::A`
  --> $DIR/intra-link-errors.rs:25:6
   |
LL | /// [f::A]
   |      ^^^^
   |
   = note: `f` is a function, not a module or type, and cannot have associated items

error: unresolved link to `S::A`
  --> $DIR/intra-link-errors.rs:29:6
   |
LL | /// [S::A]
   |      ^^^^
   |
   = note: the struct `S` has no field or associated item named `A`

error: unresolved link to `S::fmt`
  --> $DIR/intra-link-errors.rs:33:6
   |
LL | /// [S::fmt]
   |      ^^^^^^
   |
   = note: the struct `S` has no field or associated item named `fmt`

error: unresolved link to `E::D`
  --> $DIR/intra-link-errors.rs:37:6
   |
LL | /// [E::D]
   |      ^^^^
   |
   = note: the enum `E` has no variant or associated item named `D`

error: unresolved link to `u8::not_found`
  --> $DIR/intra-link-errors.rs:41:6
   |
LL | /// [u8::not_found]
   |      ^^^^^^^^^^^^^
   |
   = note: the builtin type `u8` does not have an associated item named `not_found`

error: unresolved link to `S`
  --> $DIR/intra-link-errors.rs:45:6
   |
LL | /// [S!]
   |      ^^
   |
   = note: this link resolves to the struct `S`, which is not in the macro namespace
help: to link to the struct, prefix with the item kind
   |
LL | /// [struct@S]
   |      ^^^^^^^^

error: unresolved link to `T::g`
  --> $DIR/intra-link-errors.rs:63:6
   |
LL | /// [type@T::g]
   |      ^^^^^^^^^ help: to link to the associated function, add parentheses: `T::g()`
   |
   = note: this link resolves to the associated function `g`, which is not in the type namespace

error: unresolved link to `T::h`
  --> $DIR/intra-link-errors.rs:68:6
   |
LL | /// [T::h!]
   |      ^^^^^
   |
   = note: no item named `T::h` is in scope
   = help: to escape `[` and `]` characters, add '\' before them like `\[` or `\]`

error: unresolved link to `S::h`
  --> $DIR/intra-link-errors.rs:55:6
   |
LL | /// [type@S::h]
   |      ^^^^^^^^^ help: to link to the associated function, add parentheses: `S::h()`
   |
   = note: this link resolves to the associated function `h`, which is not in the type namespace

error: unresolved link to `m`
  --> $DIR/intra-link-errors.rs:76:6
   |
LL | /// [m()]
   |      ^^^ help: to link to the macro, add an exclamation mark: `m!`
   |
   = note: this link resolves to the macro `m`, which is not in the value namespace

error: aborting due to 14 previous errors

